--- a/content/data/config.json
+++ b/content/data/config.json
@@ -21,7 +21,7 @@
                 "style": "link"
             },
             {
-                "label": "Work",
+                "label": "Work\\\\\\\\\\",
                 "altText": "Work",
                 "url": "/portfolio",
                 "showIcon": false,
@@ -68,7 +68,12 @@
         "styles": {
             "self": {
                 "width": "full",
-                "padding": ["pt-5", "pb-5", "pr-4", "pl-4"]
+                "padding": [
+                    "pt-5",
+                    "pb-5",
+                    "pr-4",
+                    "pl-4"
+                ]
             }
         }
     },
@@ -107,7 +112,12 @@
         "styles": {
             "self": {
                 "width": "full",
-                "padding": ["pt-16", "pb-16", "pr-4", "pl-4"]
+                "padding": [
+                    "pt-16",
+                    "pb-16",
+                    "pr-4",
+                    "pl-4"
+                ]
             }
         }
     }
