config.json: updated label in secondaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -39,7 +39,7 @@
                 "style": "link",
                 "elementId": "",
                 "type": "Link",
-                "label": "Journal",
+                "label": "Journaltsttttt",
                 "altText": "Journal"
             },
             {
