config.json: updated label in secondaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -15,7 +15,7 @@
         "secondaryLinks": [
             {
                 "type": "Link",
-                "label": "Home",
+                "label": "Hoddddddd",
                 "url": "/",
                 "altText": "Home",
                 "style": "link"
