--- a/content/data/config.json
+++ b/content/data/config.json
@@ -54,6 +54,17 @@
                 "type": "Link"
             },
             {
+                "label": "Learn more",
+                "altText": "Learn more",
+                "url": "/",
+                "showIcon": false,
+                "icon": "arrowLeft",
+                "iconPosition": "right",
+                "style": "secondary",
+                "elementId": "",
+                "type": "Button"
+            },
+            {
                 "label": "Contact",
                 "altText": "Contact",
                 "url": "/contact",
