config.json: Multiple updates: * updated secondaryLinks in header * updated __metadata in secondaryLinks * updated url in secondaryLinks * updated style in secondaryLinks * updated type in secondaryLinks * updated label in secondaryLinks * updated altText in secondaryLinks

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -32,6 +32,17 @@
                 "type": "Link"
             },
             {
+                "label": "Learn more",
+                "altText": "Learn more",
+                "url": "/",
+                "showIcon": false,
+                "icon": "arrowLeft",
+                "iconPosition": "right",
+                "style": "secondary",
+                "elementId": "",
+                "type": "Button"
+            },
+            {
                 "url": "/blog",
                 "showIcon": false,
                 "icon": "arrowLeft",
